--- a/index.html
+++ b/index.html
@@ -41,15 +41,123 @@
         <div class="container">
             <div class="banner__wrapper">
                 <div class="banner__left">
-                    <small>FREELANCE DIGITAL DESIGNER</small>
-                <h1>hello,I'm <span>JIBON</span> Welcome to my World.</h1>
+                    <small>FULL TIME DRIFTER </small>
+                <h1>Hello,I'm <span>SMOKEY</span> Welcome Drift World.</h1>
 
                 </div>
+                <div class="banner__right">
+                    <img src="img/a6dfe954442adfa4bb0d08737f490dda.jpg" alt="">
             </div>
         </div>
-        <div class="banner__right">
-            <img src="/img/unnamed.png" alt="">
+        
         </div>
     </section>
+<!-- ABOUT -->
+   <!-- section.about>.container>.about__wrapper -->
+   <section class="about">
+    <div class="container">
+        <div class="about__wrapper">
+            <div class="about__left">
+                <img src="./img/download (1).jpg" alt="">
+            </div>
+            <div class="about__right">
+                <h3>About Me</h3>
+                <p>There are manu variations of passages of Lorem Ipsum available, 
+                    but the majority have suffered <span>alteration</span> in some form, 
+                    by injected humour, or randomised words which dont look even slightly
+                    believable. If you are going to use a passage of Lorem Ipsums</p>
+
+                    <ul class="about__title">
+                        <li>Main Skills</li>
+                        <li>Awards</li>
+                        <li>Experiences</li>
+                        <li>Education</li>
+                    </ul>
+                    <ul class="about__main-skills">
+                        <li><h5>User experience design</h5> <span>  -UI/UX</span></li>
+                        <li class="about__main-desc">Delight the user and make it work</li>
+                        <li><h5>User experience design</h5> <span>  -UI/UX</span></li>
+                        <li class="about__main-desc">Delight the user and make it work</li>
+                        <li><h5>User experience design</h5> <span>  -UI/UX</span></li>
+                        <li class="about__main-desc">Delight the user and make it work</li>
+                    </ul>
+            </div>
+        </div>
+    </div>
+   </section>
+   <!-- SERVICES -->
+   <section class="services">
+    <div class="container">
+        <div class="services__title">
+            <h3>My Awesome</h3>
+            <p>There are many variations of passages of Lorem Ipsum <br> available,but the majority have suffered alteration</p>
+        </div>
+        <div class="services__wrapper"> 
+
+            <div class="services__card">
+            <span><i class="fa-brands fa-chromecast"></i></span>
+            <h4>Business Strategy</h4>
+            <p>I throw my self down the tall grass ny the stream as I lie close to the earth</p>
+        </div>
+            <div class="services__card">
+            <span><i class="fa-solid fa-layer-group"></i></span>
+            <h4>Business Strategy</h4>
+            <p>I throw my self down the tall grass ny the stream as I lie close to the earth</p>
+        </div>
+            <div class="services__card">
+            <span><i class="fa-brands fa-chromecast"></i></span>
+            <h4>Business Strategy</h4>
+            <p>I throw my self down the tall grass ny the stream as I lie close to the earth</p>
+        </div>
+            <div class="services__card">
+            <span><i class="fa-solid fa-display"></i></span>
+            <h4>Business Strategy</h4>
+            <p>I throw my self down the tall grass ny the stream as I lie close to the earth</p>
+        </div>
+            <div class="services__card">
+            <span><i class="fa-solid fa-camera"></i></span>
+            <h4>Business Strategy</h4>
+            <p>I throw my self down the tall grass ny the stream as I lie close to the earth</p>
+        </div>
+            <div class="services__card">
+            <span><i class="fa-brands fa-chromecast"></i></span>
+            <h4>Business Strategy</h4>
+            <p>I throw my self down the tall grass ny the stream as I lie close to the earth</p>
+        </div>
+        </div>
+    </div>
+   </section>
+   <section>
+    <div class="services">
+        <div class="container">
+            <div class="client__title">
+                <h3>My Best Client</h3>
+                <p>There are many variations of passages of Lorem ipsum<br>available,<br>but the majority have suffered alteration</p>
+            </div>
+                <div class="client__wrapper">
+                    <div class="client__card">
+                        <img src="/img/bg,f8f8f8-flat,750x,075,f-pad,750x1000,f8f8f8.jpg" alt="">
+                    </div>               
+                    <div class="client__card">
+                        <img src="/img/bg,f8f8f8-flat,750x,075,f-pad,750x1000,f8f8f8.jpg" alt="">
+                    </div>                
+                    <div class="client__card">
+                        <img src="/img/bg,f8f8f8-flat,750x,075,f-pad,750x1000,f8f8f8.jpg" alt="">
+                    </div>               
+                    <div class="client__card">
+                        <img src="/img/bg,f8f8f8-flat,750x,075,f-pad,750x1000,f8f8f8.jpg" alt="">
+                    </div>                
+                    <div class="client__card">
+                        <img src="/img/bg,f8f8f8-flat,750x,075,f-pad,750x1000,f8f8f8.jpg" alt="">
+                    </div>
+                    <div class="client__card">
+                        <img src="/img/bg,f8f8f8-flat,750x,075,f-pad,750x1000,f8f8f8.jpg" alt="">
+                    </div>
+                </div>
+        </div>
+    </div>
+   </section>
+   <script src="./script.js"></script>
+
 </body>
 </html>
