--- a/index.html
+++ b/index.html
@@ -157,6 +157,59 @@
         </div>
     </div>
    </section>
+   <section>
+    <div class="services">
+        <div class="container">
+            <div class="client__title">
+                <h3>My Latest Project</h3>
+                <p>There are many variations of passages of Lorem ipsum<br>available,<br>but the majority have suffered alteration</p>
+
+            </div>
+            <div class="client__project">
+            </div>
+                <div class="client__title">
+                    <div class="client__card">
+                        <img src="/img/civic.jpg" alt="">
+                        <h3>development</h3>
+                <h4>Getting tickets to the next show</h4>
+                <a href=""class="btn bg--border-dark">CASE STUDY</a>
+                    </div>               
+                    <div class="client__card">
+                        <img src="/img/civic.jpg" alt="">
+                        
+                        <h3>development</h3>
+                <h4>Getting tickets to the next show</h4>
+                <a href=""class="btn bg--border-dark">CASE STUDY</a>
+                    </div>                
+                    <div class="client__card">
+                        <img src="/img/civic.jpg" alt="">
+                        <h3>development</h3>
+                <h4>Getting tickets to the next show</h4>
+                <a href=""class="btn bg--border-dark">CASE STUDY</a>
+                    </div>               
+                    <div class="client__card">
+                        <img src="/img/civic.jpg" alt="">
+                        <h3>development</h3>
+                <h4>Getting tickets to the next show</h4>
+                <a href=""class="btn bg--border-dark">CASE STUDY</a>
+                    </div>                
+                    <div class="client__card">
+                        <img src="/img/civic.jpg" alt="">
+                        <h3>development</h3>
+                <h4>Getting tickets to the next show</h4>
+                <a href=""class="btn bg--border-dark">CASE STUDY</a>
+                    </div>
+                    <div class="client__card">
+                        <img src="/img/civic.jpg" alt="">
+                        <h3>development</h3>
+                <h4>Getting tickets to the next show</h4>
+                <a href=""class="btn bg--border-dark">CASE STUDY</a>
+                    </div>
+                </div>
+                </div>
+        </div>
+    </div>
+   </section>
    <script src="./script.js"></script>
 
 </body>
